categoryArticleList Image Spacing Fix
Style update per comp.

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/categoryArticleList/categoryArticleList.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/categoryArticleList/categoryArticleList.less
@@ -17,7 +17,7 @@
 
 			img {
 				float: left;
-				margin: 0 4% 0 0;
+				margin: 0 4% 10px 0;
 				width: 31%;
 			}
 		}
